build/log/idf_py_stdout_output_44024
Command: ninja all
[1/13] Linking C static library esp-idf/utils/libutils.a
[2/13] Performing build step for 'bootloader'
[1/1] cd /workspaces/mode7-ble-racer-why2025/build/bootloader && /opt/esp/python_env/idf6.0_py3.12_env/bin/python /opt/esp/idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 /workspaces/mode7-ble-racer-why2025/build/bootloader/bootloader.bin
Bootloader binary size 0x5950 bytes. 0x6b0 bytes (7%) free.
[3/13] No install step for 'bootloader'
[4/13] Completed 'bootloader'
[5/13] Building C object esp-idf/game/CMakeFiles/__idf_game.dir/math.c.obj
FAILED: esp-idf/game/CMakeFiles/__idf_game.dir/math.c.obj 
ccache /opt/esp/tools/riscv32-esp-elf/esp-15.1.0_20250607/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0-dev-1489-g4e036983a7\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/workspaces/mode7-ble-racer-why2025/build/config -I/workspaces/mode7-ble-racer-why2025/components/game -I/opt/esp/idf/components/newlib/platform_include -I/opt/esp/idf/components/freertos/config/include -I/opt/esp/idf/components/freertos/config/include/freertos -I/opt/esp/idf/components/freertos/config/riscv/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/opt/esp/idf/components/freertos/esp_additions/include -I/opt/esp/idf/components/esp_hw_support/include -I/opt/esp/idf/components/esp_hw_support/include/soc -I/opt/esp/idf/components/esp_hw_support/dma/include -I/opt/esp/idf/components/esp_hw_support/ldo/include -I/opt/esp/idf/components/esp_hw_support/debug_probe/include -I/opt/esp/idf/components/esp_hw_support/mspi_timing_tuning/include -I/opt/esp/idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/opt/esp/idf/components/esp_hw_support/power_supply/include -I/opt/esp/idf/components/esp_hw_support/port/esp32p4/. -I/opt/esp/idf/components/esp_hw_support/port/esp32p4/include -I/opt/esp/idf/components/esp_hw_support/port/esp32p4/private_include -I/opt/esp/idf/components/esp_hw_support/mspi_timing_tuning/port/esp32p4/. -I/opt/esp/idf/components/heap/include -I/opt/esp/idf/components/heap/tlsf -I/opt/esp/idf/components/log/include -I/opt/esp/idf/components/soc/include -I/opt/esp/idf/components/soc/esp32p4 -I/opt/esp/idf/components/soc/esp32p4/include -I/opt/esp/idf/components/soc/esp32p4/register/hw_ver1 -I/opt/esp/idf/components/hal/platform_port/include -I/opt/esp/idf/components/hal/esp32p4/include -I/opt/esp/idf/components/hal/include -I/opt/esp/idf/components/esp_rom/include -I/opt/esp/idf/components/esp_rom/esp32p4/include -I/opt/esp/idf/components/esp_rom/esp32p4/include/esp32p4 -I/opt/esp/idf/components/esp_rom/esp32p4 -I/opt/esp/idf/components/esp_common/include -I/opt/esp/idf/components/esp_system/include -I/opt/esp/idf/components/esp_system/port/soc -I/opt/esp/idf/components/esp_system/port/include/riscv -I/opt/esp/idf/components/esp_system/port/include/private -I/opt/esp/idf/components/riscv/include -I/opt/esp/idf/components/lwip/include -I/opt/esp/idf/components/lwip/include/apps -I/opt/esp/idf/components/lwip/include/apps/sntp -I/opt/esp/idf/components/lwip/lwip/src/include -I/opt/esp/idf/components/lwip/port/include -I/opt/esp/idf/components/lwip/port/freertos/include -I/opt/esp/idf/components/lwip/port/esp32xx/include -I/opt/esp/idf/components/lwip/port/esp32xx/include/arch -I/opt/esp/idf/components/lwip/port/esp32xx/include/sys -I/workspaces/mode7-ble-racer-why2025/components/display/include -I/opt/esp/idf/components/driver/deprecated -I/opt/esp/idf/components/driver/i2c/include -I/opt/esp/idf/components/driver/touch_sensor/include -I/opt/esp/idf/components/driver/twai/include -I/opt/esp/idf/components/esp_pm/include -I/opt/esp/idf/components/esp_ringbuf/include -I/opt/esp/idf/components/esp_driver_gpio/include -I/opt/esp/idf/components/esp_driver_pcnt/include -I/opt/esp/idf/components/esp_driver_gptimer/include -I/opt/esp/idf/components/esp_driver_spi/include -I/opt/esp/idf/components/esp_driver_mcpwm/include -I/opt/esp/idf/components/esp_driver_ana_cmpr/include -I/opt/esp/idf/components/esp_driver_i2s/include -I/opt/esp/idf/components/esp_driver_sdmmc/include -I/opt/esp/idf/components/esp_driver_sdmmc/legacy/include -I/opt/esp/idf/components/esp_driver_sd_intf/include -I/opt/esp/idf/components/sdmmc/include -I/opt/esp/idf/components/esp_driver_sdspi/include -I/opt/esp/idf/components/esp_driver_sdio/include -I/opt/esp/idf/components/esp_driver_dac/include -I/opt/esp/idf/components/esp_driver_rmt/include -I/opt/esp/idf/components/esp_driver_tsens/include -I/opt/esp/idf/components/esp_driver_sdm/include -I/opt/esp/idf/components/esp_driver_i2c/include -I/opt/esp/idf/components/esp_driver_uart/include -I/opt/esp/idf/components/vfs/include -I/opt/esp/idf/components/esp_driver_ledc/include -I/opt/esp/idf/components/esp_driver_parlio/include -I/opt/esp/idf/components/esp_driver_usb_serial_jtag/include -I/opt/esp/idf/components/esp_driver_twai/include -I/opt/esp/idf/components/esp_lcd/include -I/opt/esp/idf/components/esp_lcd/interface -I/opt/esp/idf/components/esp_lcd/rgb/include -I/opt/esp/idf/components/esp_lcd/dsi/include -I/workspaces/mode7-ble-racer-why2025/components/utils/include -march=rv32imafc_zicsr_zifencei_zaamo_zalrsc_xespv_xesploop -mabi=ilp32f  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/workspaces/mode7-ble-racer-why2025=. -fmacro-prefix-map=/opt/esp/idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/game/CMakeFiles/__idf_game.dir/math.c.obj -MF esp-idf/game/CMakeFiles/__idf_game.dir/math.c.obj.d -o esp-idf/game/CMakeFiles/__idf_game.dir/math.c.obj -c /workspaces/mode7-ble-racer-why2025/components/game/math.c
/workspaces/mode7-ble-racer-why2025/components/game/math.c:4:25: error: 'SIN_TABLE_SIZE' undeclared here (not in a function)
    4 | const int16_t sin_table[SIN_TABLE_SIZE] = {
      |                         ^~~~~~~~~~~~~~
/workspaces/mode7-ble-racer-why2025/components/game/math.c:159:20: error: unknown type name 'mat3_t'
  159 | void mat3_identity(mat3_t *m) {
      |                    ^~~~~~
/workspaces/mode7-ble-racer-why2025/components/game/math.c:165:20: error: unknown type name 'mat3_t'
  165 | void mat3_rotation(mat3_t *m, fixed16_t angle) {
      |                    ^~~~~~
/workspaces/mode7-ble-racer-why2025/components/game/math.c:165:31: error: unknown type name 'fixed16_t'
  165 | void mat3_rotation(mat3_t *m, fixed16_t angle) {
      |                               ^~~~~~~~~
/workspaces/mode7-ble-racer-why2025/components/game/math.c:174:20: error: unknown type name 'mat3_t'
  174 | void mat3_multiply(mat3_t *result, const mat3_t *a, const mat3_t *b) {
      |                    ^~~~~~
/workspaces/mode7-ble-racer-why2025/components/game/math.c:174:42: error: unknown type name 'mat3_t'
  174 | void mat3_multiply(mat3_t *result, const mat3_t *a, const mat3_t *b) {
      |                                          ^~~~~~
/workspaces/mode7-ble-racer-why2025/components/game/math.c:174:59: error: unknown type name 'mat3_t'
  174 | void mat3_multiply(mat3_t *result, const mat3_t *a, const mat3_t *b) {
      |                                                           ^~~~~~
/workspaces/mode7-ble-racer-why2025/components/game/math.c:184:1: error: unknown type name 'vec2_t'
  184 | vec2_t mat3_transform(const mat3_t *m, vec2_t v) {
      | ^~~~~~
/workspaces/mode7-ble-racer-why2025/components/game/math.c:184:29: error: unknown type name 'mat3_t'
  184 | vec2_t mat3_transform(const mat3_t *m, vec2_t v) {
      |                             ^~~~~~
/workspaces/mode7-ble-racer-why2025/components/game/math.c:184:40: error: unknown type name 'vec2_t'
  184 | vec2_t mat3_transform(const mat3_t *m, vec2_t v) {
      |                                        ^~~~~~
[6/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
ninja: build stopped: subcommand failed.
